--- a/resources/language/Ukrainian/strings.po
+++ b/resources/language/Ukrainian/strings.po
@@ -14,16 +14,16 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: uk\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 msgctxt "Addon Summary"
 msgid "A client for the popular Transmission BitTorrent application"
-msgstr ""
+msgstr "Клієнт для популярного додатка BitTorrent"
 
 msgctxt "Addon Description"
 msgid "Currently, Transmission-XBMC supports viewing, adding, removing, starting and stopping torrents. More advanced features may be added in future releases."
-msgstr ""
+msgstr "В даний час, Transmission-XBMC підтримує перегляд, додавання, видалення, запуск і зупинка торрентів. Більш просунуті функції можуть бути додані в майбутніх версіях."
 
 msgctxt "#32000"
 msgid "Transmission"
@@ -31,148 +31,152 @@ msgstr "Transmission"
 
 msgctxt "#32001"
 msgid "Connecting to Transmission"
-msgstr "Conectando con Transmission"
+msgstr "Підключення до Transmission"
 
 msgctxt "#32002"
 msgid "Transmission Error"
-msgstr "Transmission Error"
+msgstr "Помилка Transmission"
 
 msgctxt "#32003"
 msgid "Open settings dialog?"
-msgstr "¿Abrir diálogo de configuración?"
+msgstr "Відкрити вікно налаштувань?"
 
 msgctxt "#32101"
 msgid "Add"
-msgstr "Agregar"
+msgstr "Додати"
 
 msgctxt "#32102"
 msgid "Remove"
-msgstr "Eliminar"
+msgstr "Видалити"
 
 msgctxt "#32103"
 msgid "Pause"
-msgstr "Pausar"
+msgstr "Зупинити"
 
 msgctxt "#32104"
 msgid "Start"
-msgstr "Iniciar"
+msgstr "Запустити"
 
 msgctxt "#32105"
 msgid "Pause All"
-msgstr "Pausar Todo"
+msgstr "Зупинити всі"
 
 msgctxt "#32106"
 msgid "Start All"
-msgstr "Iniciar Todo"
+msgstr "Запустити всі"
 
 msgctxt "#32107"
 msgid "Exit"
-msgstr "Salir"
+msgstr "Вихід"
 
 msgctxt "#32108"
 msgid "Settings"
-msgstr "Configuración"
+msgstr "Налаштування"
 
 msgctxt "#32110"
 msgid "Name"
-msgstr "Nombre"
+msgstr "Назва"
 
 msgctxt "#32111"
 msgid "Status"
-msgstr "Estado"
+msgstr "Статус"
+
+msgctxt "#32112"
+msgid "Torrent Details"
+msgstr "Детальна інформація про торрент"
 
 msgctxt "#32200"
 msgid "Browse for torrent file"
-msgstr "Buscar un archivo torrent"
+msgstr "Вибрати торрент-файл"
 
 msgctxt "#32202"
 msgid "Search ThePirateBay"
-msgstr "Buscar en ThePirateBay"
+msgstr "Шукати на ThePirateBay"
 
 msgctxt "#32203"
 msgid "Search Mininova.org"
-msgstr "Buscar en Mininova.org"
+msgstr "Шукати на Mininova.org"
 
 msgctxt "#32204"
 msgid "Search KickassTorrents"
-msgstr "Buscar en KickassTorrents"
+msgstr "Шукати на KickassTorrents"
 
 msgctxt "#32205"
 msgid "Search 1337x"
-msgstr "Buscar en 1337x"
+msgstr "Шукати на 1337x"
 
 msgctxt "#32206"
 msgid "Search YTS"
-msgstr "Buscar en YTS"
+msgstr "Шукати на YTS"
 
 msgctxt "#32207"
 msgid "Search LimeTorrents"
-msgstr "Buscar en LimeTorrents"
+msgstr "Шукати на LimeTorrents"
 
 msgctxt "#32208"
 msgid "Search EZTV"
-msgstr "Buscar en EZTV"
+msgstr "Шукати на EZTV"
 
 msgctxt "#32290"
 msgid "Searching..."
-msgstr "Buscando..."
+msgstr "Пошук..."
 
 msgctxt "#32291"
 msgid "No results found"
-msgstr "No se han encontrado resultados"
+msgstr "Нічого не знайдено"
 
 msgctxt "#32292"
 msgid "Could not connect to search site"
-msgstr "No se puede conectar con el buscador"
+msgstr "Неможливо з'єднатися з пошуковим сайтом"
 
 msgctxt "#32293"
 msgid "Could not download torrent data"
-msgstr "No se ha podido descargar datos del torrent"
+msgstr "Не вдалося завантажити дані торрента"
 
 msgctxt "#32300"
 msgid "working"
-msgstr "trabajando"
+msgstr "завантажується"
 
 msgctxt "#32301"
 msgid "seeding"
-msgstr "compartiendo"
+msgstr "роздається"
 
 msgctxt "#32302"
 msgid "stopped"
-msgstr "datenido"
+msgstr "зупинено"
 
 msgctxt "#32800"
 msgid "RPC Settings"
-msgstr "Configuración RPC"
+msgstr "Налаштування RPC"
 
 msgctxt "#32801"
 msgid "Host"
-msgstr "Host"
+msgstr "Хост"
 
 msgctxt "#32802"
 msgid "Port"
-msgstr "Puerto"
+msgstr "Порт"
 
 msgctxt "#32803"
 msgid "User"
-msgstr "Usuario"
+msgstr "Користувач"
 
 msgctxt "#32804"
 msgid "Password"
-msgstr "Contraseña"
+msgstr "Пароль"
 
 msgctxt "#32805"
 msgid "Stop all torrents on video playback"
-msgstr "Detener todos los torrents durante la reproducción de video"
+msgstr "Зупиняти всі завантаження на час перегляду відео"
 
 msgctxt "#32900"
 msgid "An unexpected error occurred"
-msgstr "Ha ocurrido un error inesperado"
+msgstr "Невідома помилка"
 
 msgctxt "#32901"
 msgid "Could not connect to Transmission"
-msgstr "No se ha podido conectar con Transmission"
+msgstr "Не вдалося підключитися до сервера Transmission"
 
 msgctxt "#32902"
 msgid "Invalid username or password"
-msgstr "Usuario o contraseña inválidos"
+msgstr "Невірне ім'я користувача або пароль"
