--- a/resources/language/Russian/strings.po
+++ b/resources/language/Russian/strings.po
@@ -19,11 +19,11 @@ msgstr ""
 
 msgctxt "Addon Summary"
 msgid "A client for the popular Transmission BitTorrent application"
-msgstr ""
+msgstr "Клиент для популярного приложения BitTorrent"
 
 msgctxt "Addon Description"
 msgid "Currently, Transmission-XBMC supports viewing, adding, removing, starting and stopping torrents. More advanced features may be added in future releases."
-msgstr ""
+msgstr "В настоящее время, Transmission-XBMC поддерживает просмотр, добавление, удаление, запуск и остановка торрентов. Более продвинутые функции могут быть добавлены в будущих версиях."
 
 msgctxt "#32000"
 msgid "Transmission"
