--- a/resources/language/resource.language.ru_ru/strings.po
+++ b/resources/language/resource.language.ru_ru/strings.po
@@ -14,191 +14,169 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: ru_RU\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
 
 msgctxt "Addon Summary"
 msgid "A client for the popular Transmission BitTorrent application"
-msgstr ""
+msgstr "Клиент для популярного приложения BitTorrent"
 
 msgctxt "Addon Description"
 msgid "Currently, Transmission-XBMC supports viewing, adding, removing, starting and stopping torrents. More advanced features may be added in future releases."
-msgstr ""
+msgstr "В настоящее время, Transmission-XBMC поддерживает просмотр, добавление, удаление, запуск и остановка торрентов. Более продвинутые функции могут быть добавлены в будущих версиях."
 
 msgctxt "#32000"
 msgid "Transmission"
-msgstr ""
+msgstr "Transmission"
 
 msgctxt "#32001"
 msgid "Connecting to Transmission"
-msgstr ""
+msgstr "Подключение к Transmission"
 
 msgctxt "#32002"
 msgid "Transmission Error"
-msgstr ""
+msgstr "Ошибка Transmission"
 
 msgctxt "#32003"
 msgid "Open settings dialog?"
-msgstr ""
-
-#Buttons
-#empty strings from id 32004 to 32100
+msgstr "Открыть окно настроек?"
 
 msgctxt "#32101"
 msgid "Add"
-msgstr ""
+msgstr "Добавить"
 
 msgctxt "#32102"
 msgid "Remove"
-msgstr ""
+msgstr "Удалить"
 
 msgctxt "#32103"
 msgid "Pause"
-msgstr ""
+msgstr "Остановить"
 
 msgctxt "#32104"
 msgid "Start"
-msgstr ""
+msgstr "Запустить"
 
 msgctxt "#32105"
 msgid "Pause All"
-msgstr ""
+msgstr "Остановить все"
 
 msgctxt "#32106"
 msgid "Start All"
-msgstr ""
+msgstr "Запустить все"
 
 msgctxt "#32107"
 msgid "Exit"
-msgstr ""
+msgstr "Выход"
 
 msgctxt "#32108"
 msgid "Settings"
-msgstr ""
-
-#empty string with id 32109
+msgstr "Настройки"
 
 msgctxt "#32110"
 msgid "Name"
-msgstr ""
+msgstr "Название"
 
 msgctxt "#32111"
 msgid "Status"
-msgstr ""
+msgstr "Статус"
 
 msgctxt "#32112"
 msgid "Torrent Details"
-msgstr ""
-
-#Adding / Search
-#empty strings from id 32112 to 32199
+msgstr "Детальная информация о торренте"
 
 msgctxt "#32200"
 msgid "Browse for torrent file"
-msgstr ""
-
-#empty string with id 32201
+msgstr "Выбрать торрент-файл"
 
 msgctxt "#32202"
 msgid "Search ThePirateBay"
-msgstr ""
+msgstr "Искать на ThePirateBay"
 
 msgctxt "#32203"
 msgid "Search Mininova.org"
-msgstr ""
+msgstr "Искать на Mininova.org"
 
 msgctxt "#32204"
 msgid "Search KickassTorrents"
-msgstr ""
+msgstr "Искать на KickassTorrents"
 
 msgctxt "#32205"
 msgid "Search 1337x"
-msgstr ""
+msgstr "Искать на 1337x"
 
 msgctxt "#32206"
 msgid "Search YTS"
-msgstr ""
+msgstr "Искать на YTS"
 
 msgctxt "#32207"
 msgid "Search LimeTorrents"
-msgstr ""
+msgstr "Искать на LimeTorrents"
 
 msgctxt "#32208"
 msgid "Search EZTV"
-msgstr ""
-
-#empty strings from id 32209 to 32289
+msgstr "Искать на EZTV"
 
 msgctxt "#32290"
 msgid "Searching..."
-msgstr ""
+msgstr "Поиск..."
 
 msgctxt "#32291"
 msgid "No results found"
-msgstr ""
+msgstr "Ничего не найдено"
 
 msgctxt "#32292"
 msgid "Could not connect to search site"
-msgstr ""
+msgstr "Не удалось соединиться с поисковым сайтом"
 
 msgctxt "#32293"
 msgid "Could not download torrent data"
-msgstr ""
-
-#Status
-#Short torrent status
-#empty strings from id 32294 to 32299
+msgstr "Не удалось загрузить данные торрента"
 
 msgctxt "#32300"
 msgid "working"
-msgstr ""
+msgstr "загружается"
 
 msgctxt "#32301"
 msgid "seeding"
-msgstr ""
+msgstr "раздается"
 
 msgctxt "#32302"
 msgid "stopped"
-msgstr ""
-
-#Settings
-#empty strings from id 32303 to 32799
+msgstr "остановлено"
 
 msgctxt "#32800"
 msgid "RPC Settings"
-msgstr ""
+msgstr "Настройки RPC"
 
 msgctxt "#32801"
 msgid "Host"
-msgstr ""
+msgstr "Хост"
 
 msgctxt "#32802"
 msgid "Port"
-msgstr ""
+msgstr "Порт"
 
 msgctxt "#32803"
 msgid "User"
-msgstr ""
+msgstr "Пользователь"
 
 msgctxt "#32804"
 msgid "Password"
-msgstr ""
+msgstr "Пароль"
 
 msgctxt "#32805"
 msgid "Stop all torrents on video playback"
-msgstr ""
-
-#Errors
-#empty strings from id 32806 to 32899
+msgstr "Останавливать все закачки на время просмотра видео"
 
 msgctxt "#32900"
 msgid "An unexpected error occurred"
-msgstr ""
+msgstr "Неизвестная ошибка"
 
 msgctxt "#32901"
 msgid "Could not connect to Transmission"
-msgstr ""
+msgstr "Не удалось подключиться к серверу Transmission"
 
 msgctxt "#32902"
 msgid "Invalid username or password"
-msgstr ""
+msgstr "Неверное имя пользователя или пароль"
