--- a/resources/language/resource.language.uk_ua/strings.po
+++ b/resources/language/resource.language.uk_ua/strings.po
@@ -25,6 +25,10 @@ msgctxt "Addon Description"
 msgid "Currently, Transmission-XBMC supports viewing, adding, removing, starting and stopping torrents. More advanced features may be added in future releases."
 msgstr "В даний час, Transmission-XBMC підтримує перегляд, додавання, видалення, запуск і зупинка торрентів. Більш просунуті функції можуть бути додані в майбутніх версіях."
 
+msgctxt "#31000"
+msgid "General"
+msgstr "Загальні"
+
 msgctxt "#32000"
 msgid "Transmission"
 msgstr "Transmission"
