--- a/resources/language/resource.language.ru_ru/strings.po
+++ b/resources/language/resource.language.ru_ru/strings.po
@@ -19,15 +19,11 @@ msgstr ""
 
 msgctxt "Addon Summary"
 msgid "A client for the popular Transmission BitTorrent application"
-msgstr "Клиент для популярного приложения BitTorrent"
+msgstr ""
 
 msgctxt "Addon Description"
 msgid "Currently, Transmission-XBMC supports viewing, adding, removing, starting and stopping torrents. More advanced features may be added in future releases."
-msgstr "В настоящее время, Transmission-XBMC поддерживает просмотр, добавление, удаление, запуск и остановка торрентов. Более продвинутые функции могут быть добавлены в будущих версиях."
-
-msgctxt "#31000"
-msgid "General"
-msgstr "Общие"
+msgstr ""
 
 msgctxt "#32000"
 msgid "Transmission"
@@ -85,57 +81,9 @@ msgctxt "#32111"
 msgid "Status"
 msgstr "Статус"
 
-msgctxt "#32112"
-msgid "Torrent Details"
-msgstr "Детальная информация о торренте"
-
 msgctxt "#32200"
 msgid "Browse for torrent file"
 msgstr "Выбрать торрент-файл"
-
-msgctxt "#32202"
-msgid "Search ThePirateBay"
-msgstr "Искать на ThePirateBay"
-
-msgctxt "#32203"
-msgid "Search Mininova.org"
-msgstr "Искать на Mininova.org"
-
-msgctxt "#32204"
-msgid "Search KickassTorrents"
-msgstr "Искать на KickassTorrents"
-
-msgctxt "#32205"
-msgid "Search 1337x"
-msgstr "Искать на 1337x"
-
-msgctxt "#32206"
-msgid "Search YTS"
-msgstr "Искать на YTS"
-
-msgctxt "#32207"
-msgid "Search LimeTorrents"
-msgstr "Искать на LimeTorrents"
-
-msgctxt "#32208"
-msgid "Search EZTV"
-msgstr "Искать на EZTV"
-
-msgctxt "#32290"
-msgid "Searching..."
-msgstr "Поиск..."
-
-msgctxt "#32291"
-msgid "No results found"
-msgstr "Ничего не найдено"
-
-msgctxt "#32292"
-msgid "Could not connect to search site"
-msgstr "Не удалось соединиться с поисковым сайтом"
-
-msgctxt "#32293"
-msgid "Could not download torrent data"
-msgstr "Не удалось загрузить данные торрента"
 
 msgctxt "#32300"
 msgid "working"
@@ -148,6 +96,18 @@ msgstr "раздается"
 msgctxt "#32302"
 msgid "stopped"
 msgstr "остановлено"
+
+# empty strings from id 32303 to 32699
+
+msgctxt "#32700"
+msgid "General"
+msgstr "Общие"
+
+msgctxt "#32701"
+msgid "General settings for Transmission daemon"
+msgstr "Общие настройки для Transmission"
+
+# empty strings from id 32702 to 32799
 
 msgctxt "#32800"
 msgid "RPC Settings"
