--- a/resources/language/resource.language.uk_ua/strings.po
+++ b/resources/language/resource.language.uk_ua/strings.po
@@ -19,15 +19,11 @@ msgstr ""
 
 msgctxt "Addon Summary"
 msgid "A client for the popular Transmission BitTorrent application"
-msgstr "Клієнт для популярного додатка BitTorrent"
+msgstr ""
 
 msgctxt "Addon Description"
 msgid "Currently, Transmission-XBMC supports viewing, adding, removing, starting and stopping torrents. More advanced features may be added in future releases."
-msgstr "В даний час, Transmission-XBMC підтримує перегляд, додавання, видалення, запуск і зупинка торрентів. Більш просунуті функції можуть бути додані в майбутніх версіях."
-
-msgctxt "#31000"
-msgid "General"
-msgstr "Загальні"
+msgstr ""
 
 msgctxt "#32000"
 msgid "Transmission"
@@ -85,57 +81,9 @@ msgctxt "#32111"
 msgid "Status"
 msgstr "Статус"
 
-msgctxt "#32112"
-msgid "Torrent Details"
-msgstr "Детальна інформація про торрент"
-
 msgctxt "#32200"
 msgid "Browse for torrent file"
 msgstr "Вибрати торрент-файл"
-
-msgctxt "#32202"
-msgid "Search ThePirateBay"
-msgstr "Шукати на ThePirateBay"
-
-msgctxt "#32203"
-msgid "Search Mininova.org"
-msgstr "Шукати на Mininova.org"
-
-msgctxt "#32204"
-msgid "Search KickassTorrents"
-msgstr "Шукати на KickassTorrents"
-
-msgctxt "#32205"
-msgid "Search 1337x"
-msgstr "Шукати на 1337x"
-
-msgctxt "#32206"
-msgid "Search YTS"
-msgstr "Шукати на YTS"
-
-msgctxt "#32207"
-msgid "Search LimeTorrents"
-msgstr "Шукати на LimeTorrents"
-
-msgctxt "#32208"
-msgid "Search EZTV"
-msgstr "Шукати на EZTV"
-
-msgctxt "#32290"
-msgid "Searching..."
-msgstr "Пошук..."
-
-msgctxt "#32291"
-msgid "No results found"
-msgstr "Нічого не знайдено"
-
-msgctxt "#32292"
-msgid "Could not connect to search site"
-msgstr "Неможливо з'єднатися з пошуковим сайтом"
-
-msgctxt "#32293"
-msgid "Could not download torrent data"
-msgstr "Не вдалося завантажити дані торрента"
 
 msgctxt "#32300"
 msgid "working"
@@ -148,6 +96,18 @@ msgstr "роздається"
 msgctxt "#32302"
 msgid "stopped"
 msgstr "зупинено"
+
+# empty strings from id 32303 to 32699
+
+msgctxt "#32700"
+msgid "General"
+msgstr "Загальні"
+
+msgctxt "#32701"
+msgid "General settings for Transmission daemon"
+msgstr "Загальні налаштування для демона Transmission"
+
+# empty strings from id 32702 to 32799
 
 msgctxt "#32800"
 msgid "RPC Settings"
